// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildManifestProfile() builds a package manifest for a single profile version 1`] = `
{
  "dependencies": {
    "@react-native-async-storage/async-storage": "^1.17.10",
    "@react-native-clipboard/clipboard": "^1.10.0",
    "@react-native-community/checkbox": "^0.5.8",
    "@react-native-community/cli": "^9.0.0",
    "@react-native-community/cli-platform-android": "^9.0.0",
    "@react-native-community/cli-platform-ios": "^9.0.0",
    "@react-native-community/datetimepicker": "^6.3.3",
    "@react-native-community/hooks": "^2.8.0",
    "@react-native-community/netinfo": "^9.0.0",
    "@react-native-masked-view/masked-view": "^0.2.7",
    "@react-navigation/native": "^6.0.8",
    "@react-navigation/stack": "^6.2.0",
    "@rnx-kit/react-native-lazy-index": "^2.1.7",
    "jest": "^26.6.3",
    "metro": "^0.72.1",
    "metro-config": "^0.72.1",
    "metro-core": "^0.72.1",
    "metro-react-native-babel-preset": "^0.72.1",
    "metro-react-native-babel-transformer": "^0.72.1",
    "metro-resolver": "^0.72.1",
    "metro-runtime": "^0.72.1",
    "react": "18.1.0",
    "react-dom": "^18.1.0",
    "react-native": "^0.70.0",
    "react-native-base64": "^0.2.1",
    "react-native-floating-action": "^1.22.0",
    "react-native-fs": "^2.18.0",
    "react-native-gesture-handler": "^2.6.0",
    "react-native-macos": "^0.70.0",
    "react-native-modal": "^13.0.0",
    "react-native-popover-view": "^5.0.0",
    "react-native-reanimated": "^2.10.0",
    "react-native-render-html": "^6.1.0",
    "react-native-safe-area-context": "^4.4.1",
    "react-native-screens": "^3.18.2",
    "react-native-shimmer": "^0.5.0",
    "react-native-sqlite-storage": "^6.0.1",
    "react-native-svg": "^12.3.0",
    "react-native-test-app": "^1.6.9",
    "react-native-webview": "^11.23.0",
    "react-native-windows": "^0.70.0",
    "react-test-renderer": "18.1.0",
  },
  "devDependencies": {
    "@react-native-async-storage/async-storage": "^1.17.10",
    "@react-native-clipboard/clipboard": "^1.10.0",
    "@react-native-community/checkbox": "^0.5.8",
    "@react-native-community/cli": "^9.0.0",
    "@react-native-community/cli-platform-android": "^9.0.0",
    "@react-native-community/cli-platform-ios": "^9.0.0",
    "@react-native-community/datetimepicker": "^6.3.3",
    "@react-native-community/hooks": "^2.8.0",
    "@react-native-community/netinfo": "^9.0.0",
    "@react-native-masked-view/masked-view": "^0.2.7",
    "@react-navigation/native": "^6.0.8",
    "@react-navigation/stack": "^6.2.0",
    "@rnx-kit/react-native-lazy-index": "^2.1.7",
    "jest": "^26.6.3",
    "metro": "^0.72.1",
    "metro-config": "^0.72.1",
    "metro-core": "^0.72.1",
    "metro-react-native-babel-preset": "^0.72.1",
    "metro-react-native-babel-transformer": "^0.72.1",
    "metro-resolver": "^0.72.1",
    "metro-runtime": "^0.72.1",
    "react": "18.1.0",
    "react-dom": "^18.1.0",
    "react-native": "^0.70.0",
    "react-native-base64": "^0.2.1",
    "react-native-floating-action": "^1.22.0",
    "react-native-fs": "^2.18.0",
    "react-native-gesture-handler": "^2.6.0",
    "react-native-macos": "^0.70.0",
    "react-native-modal": "^13.0.0",
    "react-native-popover-view": "^5.0.0",
    "react-native-reanimated": "^2.10.0",
    "react-native-render-html": "^6.1.0",
    "react-native-safe-area-context": "^4.4.1",
    "react-native-screens": "^3.18.2",
    "react-native-shimmer": "^0.5.0",
    "react-native-sqlite-storage": "^6.0.1",
    "react-native-svg": "^12.3.0",
    "react-native-test-app": "^1.6.9",
    "react-native-webview": "^11.23.0",
    "react-native-windows": "^0.70.0",
    "react-test-renderer": "18.1.0",
  },
  "peerDependencies": {
    "@react-native-async-storage/async-storage": "^1.17.10",
    "@react-native-clipboard/clipboard": "^1.10.0",
    "@react-native-community/checkbox": "^0.5.8",
    "@react-native-community/datetimepicker": "^6.3.3",
    "@react-native-community/hooks": "^2.8.0",
    "@react-native-community/netinfo": "^9.0.0",
    "@react-native-masked-view/masked-view": "^0.2.7",
    "@react-navigation/native": "^6.0.8",
    "@react-navigation/stack": "^6.2.0",
    "@rnx-kit/react-native-lazy-index": "^2.1.7",
    "react": "18.1.0",
    "react-dom": "^18.1.0",
    "react-native": "^0.70.0",
    "react-native-base64": "^0.2.1",
    "react-native-floating-action": "^1.22.0",
    "react-native-fs": "^2.18.0",
    "react-native-gesture-handler": "^2.6.0",
    "react-native-macos": "^0.70.0",
    "react-native-modal": "^13.0.0",
    "react-native-popover-view": "^5.0.0",
    "react-native-reanimated": "^2.10.0",
    "react-native-render-html": "^6.1.0",
    "react-native-safe-area-context": "^4.4.1",
    "react-native-screens": "^3.18.2",
    "react-native-shimmer": "^0.5.0",
    "react-native-sqlite-storage": "^6.0.1",
    "react-native-svg": "^12.3.0",
    "react-native-webview": "^11.23.0",
    "react-native-windows": "^0.70.0",
  },
  "unmanagedCapabilities": {
    "@react-native-async-storage/async-storage": "storage",
    "@react-native-clipboard/clipboard": "clipboard",
    "@react-native-community/checkbox": "checkbox",
    "@react-native-community/cli": "community/cli",
    "@react-native-community/cli-platform-android": "community/cli-android",
    "@react-native-community/cli-platform-ios": "community/cli-ios",
    "@react-native-community/datetimepicker": "datetime-picker",
    "@react-native-community/hooks": "hooks",
    "@react-native-community/netinfo": "netinfo",
    "@react-native-masked-view/masked-view": "masked-view",
    "@react-navigation/native": "navigation/native",
    "@react-navigation/stack": "navigation/stack",
    "@rnx-kit/react-native-lazy-index": "lazy-index",
    "jest": "jest",
    "metro": "metro",
    "metro-config": "metro-config",
    "metro-core": "metro-core",
    "metro-react-native-babel-preset": "babel-preset-react-native",
    "metro-react-native-babel-transformer": "metro-react-native-babel-transformer",
    "metro-resolver": "metro-resolver",
    "metro-runtime": "metro-runtime",
    "react": "react",
    "react-dom": "react-dom",
    "react-native": "core",
    "react-native-base64": "base64",
    "react-native-floating-action": "floating-action",
    "react-native-fs": "filesystem",
    "react-native-gesture-handler": "gestures",
    "react-native-macos": "core-macos",
    "react-native-modal": "modal",
    "react-native-popover-view": "popover",
    "react-native-reanimated": "animation",
    "react-native-render-html": "html",
    "react-native-safe-area-context": "safe-area",
    "react-native-screens": "screens",
    "react-native-shimmer": "shimmer",
    "react-native-sqlite-storage": "sqlite",
    "react-native-svg": "svg",
    "react-native-test-app": "test-app",
    "react-native-webview": "webview",
    "react-native-windows": "core-windows",
    "react-test-renderer": "react-test-renderer",
  },
}
`;

exports[`buildManifestProfile() builds a package manifest for multiple profile versions 1`] = `
{
  "dependencies": {
    "@react-native-async-storage/async-storage": "^1.17.10",
    "@react-native-clipboard/clipboard": "^1.10.0",
    "@react-native-community/checkbox": "^0.5.8",
    "@react-native-community/cli": "^9.0.0",
    "@react-native-community/cli-platform-android": "^9.0.0",
    "@react-native-community/cli-platform-ios": "^9.0.0",
    "@react-native-community/datetimepicker": "^6.3.3",
    "@react-native-community/hooks": "^2.8.0",
    "@react-native-community/netinfo": "^9.0.0",
    "@react-native-masked-view/masked-view": "^0.2.7",
    "@react-navigation/native": "^6.0.8",
    "@react-navigation/stack": "^6.2.0",
    "@rnx-kit/react-native-lazy-index": "^2.1.7",
    "jest": "^26.6.3",
    "metro": "^0.72.1",
    "metro-config": "^0.72.1",
    "metro-core": "^0.72.1",
    "metro-react-native-babel-preset": "^0.72.1",
    "metro-react-native-babel-transformer": "^0.72.1",
    "metro-resolver": "^0.72.1",
    "metro-runtime": "^0.72.1",
    "react": "18.1.0",
    "react-dom": "^18.1.0",
    "react-native": "^0.70.0",
    "react-native-base64": "^0.2.1",
    "react-native-floating-action": "^1.22.0",
    "react-native-fs": "^2.18.0",
    "react-native-gesture-handler": "^2.6.0",
    "react-native-macos": "^0.70.0",
    "react-native-modal": "^13.0.0",
    "react-native-popover-view": "^5.0.0",
    "react-native-reanimated": "^2.10.0",
    "react-native-render-html": "^6.1.0",
    "react-native-safe-area-context": "^4.4.1",
    "react-native-screens": "^3.18.2",
    "react-native-shimmer": "^0.5.0",
    "react-native-sqlite-storage": "^6.0.1",
    "react-native-svg": "^12.3.0",
    "react-native-test-app": "^1.6.9",
    "react-native-webview": "^11.23.0",
    "react-native-windows": "^0.70.0",
    "react-test-renderer": "18.1.0",
  },
  "devDependencies": {
    "@react-native-async-storage/async-storage": "^1.17.10",
    "@react-native-clipboard/clipboard": "^1.10.0",
    "@react-native-community/checkbox": "^0.5.8",
    "@react-native-community/cli": "^9.0.0",
    "@react-native-community/cli-platform-android": "^9.0.0",
    "@react-native-community/cli-platform-ios": "^9.0.0",
    "@react-native-community/datetimepicker": "^6.3.3",
    "@react-native-community/hooks": "^2.8.0",
    "@react-native-community/netinfo": "^9.0.0",
    "@react-native-masked-view/masked-view": "^0.2.7",
    "@react-navigation/native": "^6.0.8",
    "@react-navigation/stack": "^6.2.0",
    "@rnx-kit/react-native-lazy-index": "^2.1.7",
    "jest": "^26.6.3",
    "metro": "^0.72.1",
    "metro-config": "^0.72.1",
    "metro-core": "^0.72.1",
    "metro-react-native-babel-preset": "^0.72.1",
    "metro-react-native-babel-transformer": "^0.72.1",
    "metro-resolver": "^0.72.1",
    "metro-runtime": "^0.72.1",
    "react": "18.1.0",
    "react-dom": "^18.1.0",
    "react-native": "^0.70.0",
    "react-native-base64": "^0.2.1",
    "react-native-floating-action": "^1.22.0",
    "react-native-fs": "^2.18.0",
    "react-native-gesture-handler": "^2.6.0",
    "react-native-macos": "^0.70.0",
    "react-native-modal": "^13.0.0",
    "react-native-popover-view": "^5.0.0",
    "react-native-reanimated": "^2.10.0",
    "react-native-render-html": "^6.1.0",
    "react-native-safe-area-context": "^4.4.1",
    "react-native-screens": "^3.18.2",
    "react-native-shimmer": "^0.5.0",
    "react-native-sqlite-storage": "^6.0.1",
    "react-native-svg": "^12.3.0",
    "react-native-test-app": "^1.6.9",
    "react-native-webview": "^11.23.0",
    "react-native-windows": "^0.70.0",
    "react-test-renderer": "18.1.0",
  },
  "peerDependencies": {
    "@react-native-async-storage/async-storage": "^1.17.7 || ^1.17.10",
    "@react-native-clipboard/clipboard": "^1.10.0",
    "@react-native-community/checkbox": "^0.5.8",
    "@react-native-community/datetimepicker": "^6.0.2 || ^6.3.3",
    "@react-native-community/hooks": "^2.8.0",
    "@react-native-community/netinfo": "^8.0.0 || ^9.0.0",
    "@react-native-masked-view/masked-view": "^0.2.7",
    "@react-navigation/native": "^6.0.8",
    "@react-navigation/stack": "^6.2.0",
    "@rnx-kit/react-native-lazy-index": "^2.1.7",
    "hermes-engine": "~0.11.0",
    "react": "18.0.0 || 18.1.0",
    "react-dom": "^18.0.0 || ^18.1.0",
    "react-native": "^0.69.0 || ^0.70.0",
    "react-native-base64": "^0.2.1",
    "react-native-floating-action": "^1.22.0",
    "react-native-fs": "^2.18.0",
    "react-native-gesture-handler": "^2.5.0 || ^2.6.0",
    "react-native-macos": "^0.69.0 || ^0.70.0",
    "react-native-modal": "^13.0.0",
    "react-native-popover-view": "^5.0.0",
    "react-native-reanimated": "^2.9.0 || ^2.10.0",
    "react-native-render-html": "^6.1.0",
    "react-native-safe-area-context": "^4.3.1 || ^4.4.1",
    "react-native-screens": "^3.14.1 || ^3.18.2",
    "react-native-shimmer": "^0.5.0",
    "react-native-sqlite-storage": "^6.0.1",
    "react-native-svg": "^12.3.0",
    "react-native-webview": "^11.23.0",
    "react-native-windows": "^0.69.0 || ^0.70.0",
  },
  "unmanagedCapabilities": {
    "@react-native-async-storage/async-storage": "storage",
    "@react-native-clipboard/clipboard": "clipboard",
    "@react-native-community/checkbox": "checkbox",
    "@react-native-community/cli": "community/cli",
    "@react-native-community/cli-platform-android": "community/cli-android",
    "@react-native-community/cli-platform-ios": "community/cli-ios",
    "@react-native-community/datetimepicker": "datetime-picker",
    "@react-native-community/hooks": "hooks",
    "@react-native-community/netinfo": "netinfo",
    "@react-native-masked-view/masked-view": "masked-view",
    "@react-navigation/native": "navigation/native",
    "@react-navigation/stack": "navigation/stack",
    "@rnx-kit/react-native-lazy-index": "lazy-index",
    "jest": "jest",
    "metro": "metro",
    "metro-config": "metro-config",
    "metro-core": "metro-core",
    "metro-react-native-babel-preset": "babel-preset-react-native",
    "metro-react-native-babel-transformer": "metro-react-native-babel-transformer",
    "metro-resolver": "metro-resolver",
    "metro-runtime": "metro-runtime",
    "react": "react",
    "react-dom": "react-dom",
    "react-native": "core",
    "react-native-base64": "base64",
    "react-native-floating-action": "floating-action",
    "react-native-fs": "filesystem",
    "react-native-gesture-handler": "gestures",
    "react-native-macos": "core-macos",
    "react-native-modal": "modal",
    "react-native-popover-view": "popover",
    "react-native-reanimated": "animation",
    "react-native-render-html": "html",
    "react-native-safe-area-context": "safe-area",
    "react-native-screens": "screens",
    "react-native-shimmer": "shimmer",
    "react-native-sqlite-storage": "sqlite",
    "react-native-svg": "svg",
    "react-native-test-app": "test-app",
    "react-native-webview": "webview",
    "react-native-windows": "core-windows",
    "react-test-renderer": "react-test-renderer",
  },
}
`;
